[tool.black]
# https://github.com/ambv/black
line-length = 98
skip-string-normalization = true
target-version = ['py37']

[tool.poetry]
name = "repka"
version = "2.2.0"
description = "Python repository pattern implementation"
authors = ["potykion <potykion@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/potykion/repka"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = ">=1.0,<1.7"
sqlalchemy = "^1.3"
aiopg = "^1"
typing_inspect = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10.0"
pytest-dotenv = "^0.4.0"
black = "=19.3b0"
pre-commit = "^1.17"
mypy = "^0.720.0"
flake8 = "^3.7"
bump2version = "^0.5.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
